--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Резюме - Черевко Богдан Вікторович</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-7RvZ8Wte5P6LJU6Al+U6x5U6yYXbVn15HJmU7ONgP6ZckkbBzghL+ywIv/3W1+8N1rVlruZrRv7taW+Z8Tt4ag==" crossorigin="anonymous" referrerpolicy="no-referrer" />
